all-manifests.yaml
---
# Source: rocketchat/charts/mongodb/templates/metrics-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-mongodb-metrics
  namespace: "rocketchat"
  labels:
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/version: 6.0.10
    helm.sh/chart: mongodb-13.18.5
    app.kubernetes.io/component: metrics
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "9216"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - port: 9216
      targetPort: metrics
      protocol: TCP
      name: http-metrics
  selector:
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: mongodb
---
# Source: rocketchat/charts/mongodb/templates/replicaset/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-mongodb-headless
  namespace: "rocketchat"
  labels:
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/version: 6.0.10
    helm.sh/chart: mongodb-13.18.5
    app.kubernetes.io/component: mongodb
spec:
  type: ClusterIP
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
    - name: "mongodb"
      port: 27017
      targetPort: mongodb
  selector:
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/component: mongodb
---
# Source: rocketchat/charts/nats/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-nats
  namespace: rocketchat
  labels:
    helm.sh/chart: nats-0.15.1
    app.kubernetes.io/name: nats
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/version: "2.7.4"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    app.kubernetes.io/name: nats
    app.kubernetes.io/instance: rocketchat
  clusterIP: None
  publishNotReadyAddresses: true
  ports:
  - name: client
    port: 4222
  - name: cluster
    port: 6222
  - name: monitor
    port: 8222
  - name: metrics
    port: 7777
  - name: leafnodes
    port: 7422
  - name: gateways
    port: 7522
---
# Source: rocketchat/templates/microservices-account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-account
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9458"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    targetPort: 9458
    port: 9458
    protocol: TCP
  selector:
      app.kubernetes.io/name: rocketchat-account
      app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/microservices-authorization-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-authorization
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9458"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    targetPort: 9458
    port: 9458
    protocol: TCP
  selector:
    app.kubernetes.io/name: rocketchat-authorization
    app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/microservices-ddp-streamer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-ddp-streamer
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9458"
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    targetPort: 3000
    port: 3000
    protocol: TCP
  - name: metrics
    targetPort: 9458
    port: 9458
    protocol: TCP
  selector:
    app.kubernetes.io/name: rocketchat-ddp-streamer
    app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/microservices-presence-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-presence
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9458"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    targetPort: 9458
    port: 9458
    protocol: TCP
  selector:
    app.kubernetes.io/name: rocketchat-presence
    app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/microservices-stream-hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-stream-hub
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9458"
spec:
  type: ClusterIP
  ports:
  - name: metrics
    targetPort: 9458
    port: 9458
    protocol: TCP
  selector:
    app.kubernetes.io/name: rocketchat-stream-hub
    app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/nats-monitor.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-nats-metrics
  namespace: rocketchat
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "8222"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: nats
    app.kubernetes.io/instance: rocketchat
  publishNotReadyAddresses: true
  ports:
  - appProtocol: http
    name: monitor
    port: 8222
    protocol: TCP
    targetPort: monitor
  sessionAffinity: None
---
# Source: rocketchat/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-rocketchat
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9100"
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: metrics
    port: 9100
    targetPort: 9100
    protocol: TCP
  selector:
    app.kubernetes.io/name: rocketchat
    app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-rocketchat-monolith-ms-metrics
  annotations:
    prometheus.io/path: "/metrics"
    prometheus.io/scrape: "true"
    prometheus.io/port: "9458"
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
  - name: moleculer-metrics
    port: 9458
    targetPort: 9458
    protocol: TCP
  selector:
    app.kubernetes.io/name: rocketchat
    app.kubernetes.io/instance: rocketchat
---
# Source: rocketchat/charts/nats/templates/nats-box.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-nats-box
  namespace: rocketchat
  labels:
    app: rocketchat-nats-box
    chart: nats-0.15.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocketchat-nats-box
  template:
    metadata:
      labels:
        app: rocketchat-nats-box
    spec:
      volumes:
      containers:
      - name: nats-box
        image: natsio/nats-box:0.8.1
        imagePullPolicy: IfNotPresent
        resources:
          null
        command:
        - "tail"
        - "-f"
        - "/dev/null"
        volumeMounts:
---
# Source: rocketchat/templates/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-rocketchat
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rocketchat
      app.kubernetes.io/instance: rocketchat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rocketchat
        app.kubernetes.io/instance: rocketchat
      annotations:  
                  
        
        checksum/secret: 7e09000954380cd83b732f715a70c6c8622d6aeecabe6515578d2837ecf9f804

    spec:
      securityContext:
        fsGroup: 999
        runAsUser: 999
      serviceAccountName: rocketchat-rocketchat
      containers:
      - name: rocketchat
        image: "registry.rocket.chat/rocketchat/rocket.chat:7.12.2"
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 999
        ports:
        - name: http
          containerPort: 3000
        - name: metrics
          containerPort: 9100
        - name: ms-metrics
          containerPort: 9458
        livenessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: http
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        resources:
          null
        volumeMounts:
        - name: rocket-data
          mountPath: /app/uploads
        - name: tmp
          mountPath: /tmp          
      volumes:
      - name: tmp
        emptyDir: {}
      - name: rocket-data
        persistentVolumeClaim:
          claimName: rocketchat-rocketchat
      nodeSelector:
                
         
      tolerations:
---
# Source: rocketchat/templates/microservices-account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-account
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rocketchat-account
      app.kubernetes.io/instance: rocketchat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rocketchat-account
        app.kubernetes.io/instance: rocketchat
      annotations:
                
        
    spec:
      tolerations:
                
        
      nodeSelector:
                
        
      affinity:
                
        
      containers:
      - name: account-service
        image: "rocketchat/account-service:7.12.2"
        ports:
        - name: ms-metrics
          containerPort: 9458
        volumeMounts:   
        securityContext:
          {}
        resources:
          {}
      volumes:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

# vi: ts=8 et sw=2 smarttab
---
# Source: rocketchat/templates/microservices-authorization-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-authorization
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: rocketchat-authorization
      app.kubernetes.io/instance: rocketchat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rocketchat-authorization
        app.kubernetes.io/instance: rocketchat
      annotations:
                
        
   
    spec:
      tolerations:
                
        
      nodeSelector:
                
        
      affinity:
                
              
      containers:
      - name: authorization-service
        image: "rocketchat/authorization-service:7.12.2"
        ports:
        - name: ms-metrics
          containerPort: 9458
        volumeMounts:   
        securityContext:
          {}
        resources:
          {}
      volumes:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
# Source: rocketchat/templates/microservices-ddp-streamer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-ddp-streamer
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rocketchat-ddp-streamer
      app.kubernetes.io/instance: rocketchat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rocketchat-ddp-streamer
        app.kubernetes.io/instance: rocketchat
      annotations:
                
        
    spec:
      tolerations:
                
        
      nodeSelector:
                
              
      affinity:
                
                 
      containers:
      - name: ddp-streamer
        image: "rocketchat/ddp-streamer-service:7.12.2"
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        - name: ms-metrics
          containerPort: 9458
        livenessProbe:
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          initialDelaySeconds: 2
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        volumeMounts:   
        securityContext:
          {}
        resources:
          {}
      volumes:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
# Source: rocketchat/templates/microservices-presence-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-presence
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: rocketchat-presence
      app.kubernetes.io/instance: rocketchat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rocketchat-presence
        app.kubernetes.io/instance: rocketchat
      annotations:
            
        
    spec:
      tolerations:
                
        
      nodeSelector:
                
              
      affinity:
                
           
      containers:
      - name: presence-service
        image: "rocketchat/presence-service:7.12.2"
        ports:
        - name: ms-metrics
          containerPort: 9458
        volumeMounts:   
        securityContext:
          {}
        resources:
          {}
      volumes:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
# Source: rocketchat/templates/microservices-stream-hub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-stream-hub
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: rocketchat-stream-hub
      app.kubernetes.io/instance: rocketchat
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rocketchat-stream-hub
        app.kubernetes.io/instance: rocketchat
      annotations:
               
        
    spec:
      tolerations:
                
        
      nodeSelector:
                
              
      affinity:
                
           
      containers:
      - name: stream-hub
        image: "rocketchat/stream-hub-service:7.12.2"
        ports:
        - name: ms-metrics
          containerPort: 9458
        volumeMounts:   
        securityContext:
          {}
        resources:
          {}
      volumes:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
# Source: rocketchat/charts/mongodb/templates/replicaset/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rocketchat-mongodb
  namespace: "rocketchat"
  labels:
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/version: 6.0.10
    helm.sh/chart: mongodb-13.18.5
    app.kubernetes.io/component: mongodb
spec:
  serviceName: rocketchat-mongodb-headless
  podManagementPolicy: OrderedReady
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/instance: rocketchat
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/component: mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: rocketchat
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: mongodb
        app.kubernetes.io/version: 6.0.10
        helm.sh/chart: mongodb-13.18.5
        app.kubernetes.io/component: mongodb
    spec:
      
      serviceAccountName: rocketchat-mongodb
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: rocketchat
                    app.kubernetes.io/name: mongodb
                    app.kubernetes.io/component: mongodb
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        sysctls: []
      
      containers:
        - name: mongodb
          image: docker.io/bitnamilegacy/mongodb:6.0.10-debian-11-r8
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsGroup: 0
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          command:
            - /scripts/setup.sh
          ports:
            - name: mongodb
              containerPort: 27017
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 10
            exec:
              command:
                - /bitnami/scripts/ping-mongodb.sh
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bitnami/scripts/readiness-probe.sh
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: datadir
              mountPath: /bitnami/mongodb
              subPath: 
            - name: common-scripts
              mountPath: /bitnami/scripts
            - name: custom-init-scripts
              mountPath: /docker-entrypoint-initdb.d
            - name: scripts
              mountPath: /scripts/setup.sh
              subPath: setup.sh
            
        - name: metrics
          image: docker.io/bitnamilegacy/mongodb-exporter:0.39.0-debian-11-r106
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsGroup: 0
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          command:
            - /bin/bash
            - -ec
          args:
            - |
              /bin/mongodb_exporter  --collector.diagnosticdata --collector.replicasetstatus --compatible-mode --mongodb.direct-connect --mongodb.global-conn-pool --web.listen-address ":9216" --mongodb.uri "mongodb://$MONGODB_ROOT_USER:$(echo $MONGODB_ROOT_PASSWORD | sed -r "s/@/%40/g;s/:/%3A/g")@localhost:27017/admin?" 
          volumeMounts:
          ports:
            - name: metrics
              containerPort: 9216
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 10
            httpGet:
              path: /
              port: metrics
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 10
            httpGet:
              path: /
              port: metrics
          resources:
            limits: {}
            requests: {}
      volumes:
        - name: common-scripts
          configMap:
            name: rocketchat-mongodb-common-scripts
            defaultMode: 0550
        - name: custom-init-scripts
          configMap:
            name: rocketchat-mongodb-fix-clustermonitor-role-configmap
        - name: scripts
          configMap:
            name: rocketchat-mongodb-scripts
            defaultMode: 0755
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: datadir
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "2Gi"
---
# Source: rocketchat/charts/nats/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rocketchat-nats
  namespace: rocketchat
  labels:
    helm.sh/chart: nats-0.15.1
    app.kubernetes.io/name: nats
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/version: "2.7.4"
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: nats
      app.kubernetes.io/instance: rocketchat
  replicas: 1
  serviceName: rocketchat-nats

  podManagementPolicy: Parallel

  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "7777"
        prometheus.io/scrape: "true"
        checksum/config: 3629675b28bf88c0504609b8bb05c27ffbe18d21e8474023d82a52e4a195195e
      labels:
        app.kubernetes.io/name: nats
        app.kubernetes.io/instance: rocketchat
    spec:
      # Common volumes for the containers.
      volumes:
      - name: config-volume
        configMap:
          name: rocketchat-nats-config

      # Local volume shared with the reloader.
      - name: pid
        emptyDir: {}

      #################
      #               #
      #  TLS Volumes  #
      #               #
      #################

      # Required to be able to HUP signal and apply config
      # reload to the server without restarting the pod.
      shareProcessNamespace: true

      #################
      #               #
      #  NATS Server  #
      #               #
      #################
      terminationGracePeriodSeconds: 60
      containers:
      - name: nats
        image: nats:2.4-alpine
        imagePullPolicy: IfNotPresent
        resources:
          {}
        ports:
        - containerPort: 4222
          name: client
        - containerPort: 6222
          name: cluster
        - containerPort: 8222
          name: monitor
        - containerPort: 7777
          name: metrics

        command:
        - "nats-server"
        - "--config"
        - "/etc/nats-config/nats.conf"

        # Required to be able to define an environment variable
        # that refers to other environment variables.  This env var
        # is later used as part of the configuration file.
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nats-config
        - name: pid
          mountPath: /var/run/nats

        #######################
        #                     #
        # Healthcheck Probes  #
        #                     #
        #######################
        livenessProbe:
          httpGet:
            path: /
            port: 8222
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /
            port: 8222
          initialDelaySeconds: 10
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 30

        # Gracefully stop NATS Server on pod deletion or image upgrade.
        #
        lifecycle:
          preStop:
            exec:
              # send the lame duck shutdown signal to trigger a graceful shutdown
              # nats-server will ignore the TERM signal it receives after this
              #
              command:
              - "nats-server"
              - "-sl=ldm=/var/run/nats/nats.pid"

      #################################
      #                               #
      #  NATS Configuration Reloader  #
      #                               #
      #################################
      - name: reloader
        image: natsio/nats-server-config-reloader:0.6.3
        imagePullPolicy: IfNotPresent
        resources:
          null
        command:
        - "nats-server-config-reloader"
        - "-pid"
        - "/var/run/nats/nats.pid"
        - "-config"
        - "/etc/nats-config/nats.conf"
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nats-config
        - name: pid
          mountPath: /var/run/nats

      ##############################
      #                            #
      #  NATS Prometheus Exporter  #
      #                            #
      ##############################
      - name: metrics
        image: natsio/prometheus-nats-exporter:0.9.1
        imagePullPolicy: IfNotPresent
        resources:
          {}
        args:
        - -connz
        - -routez
        - -subz
        - -varz
        - -prefix=nats
        - -use_internal_server_id
        - http://localhost:8222/
        ports:
        - containerPort: 7777
          name: metrics

  volumeClaimTemplates:
---
# Source: rocketchat/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocketchat-rocketchat
  annotations:
    cert-manager.io/cluster-issuer: production-cert-issuer
  labels:
    app.kubernetes.io/name: rocketchat
    helm.sh/chart: rocketchat-6.27.1
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/managed-by: Helm
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - k8.canepro.me
      secretName: rocketchat-tls
  rules:
  -
    host: k8.canepro.me
    http:
      paths:
      - path: /
        pathType:  Prefix 
        backend:
          service:
            name: rocketchat-rocketchat
            port:
              name: http
      - path: /sockjs
        pathType: Prefix
        backend:
          service:
            name: rocketchat-ddp-streamer
            port:
              name: http
      - path: /websocket
        pathType: Prefix
        backend:
          service:
            name: rocketchat-ddp-streamer
            port:
              name: http
---
# Source: rocketchat/charts/nats/templates/tests/test-request-reply.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "rocketchat-nats-test-request-reply"
  labels:
    helm.sh/chart: nats-0.15.1
    app.kubernetes.io/name: nats
    app.kubernetes.io/instance: rocketchat
    app.kubernetes.io/version: "2.7.4"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
  - name: nats-box
    image: synadia/nats-box
    command:
    - /bin/sh
    - -ec
    - |
      nats reply -s nats://$NATS_HOST:4222 'name.>' --command "echo 1" &
    - |
      "&&"
    - |
      name=$(nats request -s nats://$NATS_HOST:4222 name.test '' 2>/dev/null)
    - |
      "&&"
    - |
      [ $name = test ]

  restartPolicy: Never
---
# Source: rocketchat/templates/tests/test-rocketchat-startup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "rocketchat-startup-test"
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: rocketchat-startup-test
      image: r0zbot/rocketchat-test-utils
      imagePullPolicy: "IfNotPresent"
      securityContext:
        fsGroup: 999
        runAsUser: 999
      command:
        - /bin/bash
        - -ec
        - echo "testing host $ROCKETCHAT_HOST" && ./wait_http.sh "$ROCKETCHAT_HOST" && ./basic_test.sh "$ROCKETCHAT_HOST"
  restartPolicy: Never
